Small edit post-merge + add readme file

--- a/3.1-regional_sales.ipynb
+++ b/3.1-regional_sales.ipynb
@@ -266,7 +266,7 @@
     }
    ],
    "source": [
-    "games= pd.read_csv(\"games_sales_clean.csv\", header=\"infer\")\n",
+    "games= pd.read_csv(\"data/games_sales_clean.csv\", header=\"infer\")\n",
     "games=games[games.Year_of_Release >=2000]\n",
     "games"
    ]
