--- a/3.2-number_of_games.ipynb
+++ b/3.2-number_of_games.ipynb
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "ds= pd.read_csv(\"games_sales_clean.csv\", header=\"infer\")\n",
+    "ds= pd.read_csv(\"data/games_sales_clean.csv\", header=\"infer\")\n",
     "indexNames = ds[ ds['Year_of_Release'] > 2016.0].index\n",
     "# Delete these row indexes from dataFrame\n",
     "ds.drop(indexNames , inplace=True)\n",
