--- a/3.3-regional_relative_sales_per_genre.ipynb
+++ b/3.3-regional_relative_sales_per_genre.ipynb
@@ -155,7 +155,7 @@
    ],
    "source": [
     "# Read in our data\n",
-    "data = pd.read_csv('./data/games_sales_clean.csv')\n",
+    "data = pd.read_csv('data/games_sales_clean.csv')\n",
     "# Change the data type of Year of Release to int\n",
     "data['Year_of_Release'] = data['Year_of_Release'].apply(lambda x: int(x))\n",
     "data.head()"
