--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -327,7 +327,7 @@
     }
    ],
    "source": [
-    "games= pd.read_csv(\"Video_Games_Sales_as_at_22_Dec_2016.csv\", header=\"infer\")\n",
+    "games= pd.read_csv(\"data/Video_Games_Sales_as_at_22_Dec_2016.csv\", header=\"infer\")\n",
     "games"
    ]
   },
@@ -742,7 +742,7 @@
    },
    "outputs": [],
    "source": [
-    "#games_df.to_csv(\"games_sales_clean.csv\",index=False)"
+    "games_df.to_csv(\"data/games_sales_clean.csv\",index=False)"
    ]
   }
  ],
